# invest-harness

./: .gitignore  README.md  pyproject.toml
adapters/: __init__.py  adapter_akshare.py  adapter_polymarket.py  adapter_tushare.py  adapter_yahoo.py  adapter_yfinance.py  market_data.py
config/: .env.example  exchange_calendar.json  markets.json  portfolio_snapshot.json  watchlist.json
docs/: DEPLOYMENT.md  GETTING_STARTED.md  KNOWLEDGE_PATHS.md  OPENCLAW_FEISHU.md  PUBLIC_REPO.md
knowledge/: README.md
lib/: alert.py  chroma_client.py  conductor.py  config.py  contrarian.py  db.py  decay.py  dedup.py  feedback_engine.py  feishu.py  hypothesis.py  knowledge.py  notifications.py  review.py  rules.py  run_store.py  scanner.py  schema_validator.py  stat_eligibility.py  state_machine.py  verification.py  watchlist.py
prompts/: contrarian.md  hypothesis_gen.md  info_digest.md  ingest_normalize.md  lesson_extract.md  nightly_review.md  post_verify.md  rule_proposal.md  scan.md
rules/: a_stock.md  hk_stock.md  polymarket.md  rule_candidates.md  universal.md  us_stock.md
schemas/: alert.schema.json  consensus_tracking.schema.json  execution_log.schema.json  fact.schema.json  feedback.schema.json  hypothesis.schema.json  monitor_snapshot.schema.json  portfolio_snapshot.schema.json  review.schema.json  run_record.schema.json  scan_candidate.schema.json  stat_eligibility.schema.json  watchlist.schema.json
scripts/: chroma_rebuild.py  cold_backup.py  cron_dispatch.sh  harness_cli.py  harness_inbound.py  ingest.py  init_local_config.py  lock_hypothesis.py  post_verify.py  (+4 more)
(+70 files in other folders)
